# Dev_NP_TTA_CProc

./: CMakeLists.txt  CMakeSettings.json  MyCodeMacros.cmake  MyGlobalImports.cmake  README.md
CommonLib/: CMakeLists.txt  CProcInfo.cpp  CProcInfo.h  GPIO.cpp  GPIO.h  HLC.cpp  HLC.h  MainInfo.cpp  SoftwareVersion.h  cmnPriorities.h  cmnPriorities_linux.cpp  cmnProgramParms.cpp  cmnProgramParms.h  cxBaseCommThread.h  cxBaseCommThread_loop.cpp  cxBaseCommThread_seq1.cpp  cxBaseCommThread_thread.cpp  cxBaseCommThread_txrx.cpp  cxCProcParms.cpp  cxCProcParms.h  cxDACommThread.h  cxDACommThread_gbc.cpp  cxDACommThread_gcs.cpp  cxDACommThread_gft.cpp  cxDACommThread_gsv.cpp  cxDACommThread_gsx.cpp  cxDACommThread_seq1.cpp  cxDACommThread_thread.cpp  cxDACommThread_tst.cpp  cxDACommThread_txrx.cpp  cxDACommThread_update.cpp  cxDiscretes.cpp  cxDiscretes.h  cxHLCTimerThread.h  cxHLCTimerThread_class.cpp  cxHLCTimerThread_proc.cpp  cxHLCTimerThread_read.cpp  cxMainTimerThread.h  cxMainTimerThread_aux.cpp  cxMainTimerThread_class.cpp  (+52 more)
Test/: CMakeLists.txt  CmdLineExec.cpp  MainInit.cpp  cmnPriorities.h  cmnPriorities_linux.cpp
commtest/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  acomCommParms.cpp  acomCommParms.h  acomExperiment.cpp  acomExperiment.h  acomTestSeqThread.h  acomTestSeqThread_test.cpp  acomTestSeqThread_thread.cpp  acomTestSeqThread_txrx.cpp  cmnPriorities.h  cmnPriorities_linux.cpp  cmnPriorities_win.cpp  cmnShare.cpp  cmnShare.h
cproc/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  stdafx.h
newcproc/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInfo.cpp  MainInfo.h  MainInit.cpp
